--- a/src/app.css
+++ b/src/app.css
@@ -6,3 +6,18 @@
     background-color: #E9580B;
     color: white;
 }
+
+.underline {
+    color: #E9580B;
+}
+
+html,
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .h-screen {
+    height: 90vh;
+  }
