--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 .bg-orange {
     background-color: #E9580B;
@@ -13,6 +17,7 @@
 
 html,
   body {
+    font-family: "Roboto", sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
